--- a/app.json
+++ b/app.json
@@ -91,7 +91,7 @@
       },
       "UPSTREAM_REPO": {
         "description": "لا تـغيرها ابـدا",
-        "value": "https://github.com/Crnoour/cr-S",
+        "value": "https://github.com/01544488662/cr-ahmed2",
         "required": true
       }
     },
